<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_3_6_hours_sunlight">About 3–6 hours sunlight</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Planto</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at_least_6_hours_sunlight">At least 6 hours sunlight</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bright_with_little_sunlight">Bright with little sunlight</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="categories">Categories</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="continue_">Continue</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_account">Create Account</string>
    <string name="default_web_client_id">725433163314-qha9dubeerbdbakku6to6q4h818h337f.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="experts">Experts</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">732324915170311</string>
    <string name="facebook_client_token">6FWxVjUGPA9T0UiGDDoZ5zeml8k=</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fb_login_protocol_scheme">fb732324915170311</string>
    <string name="find_plant">Find Plant</string>
    <string name="findplant1_new">Find by plant type</string>
    <string name="findplant3_new">Add all of your plants for easy care</string>
    <string name="firebase_database_url">https://login-and-sign-up-21ceb-default-rtdb.firebaseio.com</string>
    <string name="flowers">Flowers</string>
    <string name="forgot_the_password">Forgot the Password?</string>
    <string name="fruits">Fruits</string>
    <string name="full_shade">Full shade</string>
    <string name="full_sun">Full sun</string>
    <string name="gcm_defaultSenderId">725433163314</string>
    <string name="google_api_key">AIzaSyD47TGIBePmNCrSSuSrQMO85XR13En4Wus</string>
    <string name="google_app_id">1:725433163314:android:1ba3084bb542cc42d3a62b</string>
    <string name="google_crash_reporting_api_key">AIzaSyD47TGIBePmNCrSSuSrQMO85XR13En4Wus</string>
    <string name="google_storage_bucket">login-and-sign-up-21ceb.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="login_for_your">Login For Your</string>
    <string name="market">Market</string>
    <string name="next_adventure">Next Adventure</string>
    <string name="password">Password</string>
    <string name="plants">My Plants</string>
    <string name="reminders_emptysite_title">Let\'s get started</string>
    <string name="reminders_text_addaplant">Add Plant</string>
    <string name="reminders_text_professionalguide">Get professional plant care guidance to keep your plants alive!</string>
    <string name="sign_in">Sign In</string>
    <string name="profile">Profile</string>
    <string name="plantsetting_text_deleteplant">Delete This Plant</string>
    <string name="plantsetting_text_plantheight">Plant height</string>
    <string name="plantsetting_text_plantingtime">Planting time</string>
    <string name="plantsetting_careschedule_tilte">Plant Care Schedule</string>
    <string name="plantdetailoverview_text_carewater">Watering</string>
    <string name="plantdetailplantinfo_fertilizing_title">Fertilizing</string>
    <string name="plantdetail_changecaresheet_text_fertilizingtype">Fertilizing type</string>
    <string name="plantsetting_careschedule_text_pruning">Pruning</string>
    <string name="plantsetting_careschedule_text_misting">Misting</string>
    <string name="plantsetting_careschedule_text_rotating">Rotating</string>
    <string name="plantsettings_setsite_text">Set site</string>
    <string name="plantsetting_sitecondition_text_site">Site</string>
    <string name="plantsetting_pot_tilte">Pot</string>
    <string name="plantsetting_pot_text_type">Type</string>
    <string name="plantsetting_pot_text_size">Size</string>
    <string name="plantsetting_pot_text_drainage">Drainage</string>
    <string name="disease">Disease</string>
</resources>