<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/bottom_btn1"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/my_plant"
        android:icon="@drawable/custom_home_menu_my_plant"
        android:title="@string/plants"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ic_camera"
        android:enabled="true"
        android:icon="@drawable/custom_home_menu_health"
        android:title="@string/disease"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/market"
        android:icon="@drawable/ic_cart"
        android:title="@string/market"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ic_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
