<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_empty"
        android:layout_width="@dimen/x180"
        android:layout_height="@dimen/x180"
        android:layout_marginTop="@dimen/x272"
        android:src="@drawable/icon_reminder_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x32"
        android:text="@string/reminders_emptysite_title"
        android:textColor="@color/black"
        android:textSize="@dimen/x48"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_empty" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x64"
        android:layout_marginTop="@dimen/x24"
        android:layout_marginEnd="@dimen/x64"
        android:gravity="center"
        android:text="@string/reminders_text_professionalguide"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/x30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <LinearLayout
        android:id="@+id/ll_add_plant_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x88"
        android:layout_marginStart="@dimen/x88"
        android:layout_marginTop="@dimen/x40"
        android:layout_marginEnd="@dimen/x88"
        android:background="@drawable/bg_reminder_empty_add"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/text_desc">

        <ImageView
            android:layout_width="@dimen/x48"
            android:layout_height="@dimen/x48"
            android:src="@drawable/icon_reminder_add" />

        <TextView
            android:id="@+id/text_add_plant_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reminders_text_addaplant"
            android:textColor="@color/white"
            android:textSize="@dimen/x36"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
